@@ -22,8 +22,6 @@ import java.io.IOException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import javafx.application.Platform;
-import javafx.beans.value.ChangeListener;
-import javafx.beans.value.ObservableValue;
 import javafx.collections.FXCollections;
 import javafx.event.EventHandler;
 import javafx.geometry.Insets;
@@ -31,7 +29,6 @@ import javafx.scene.control.Button;
 import javafx.scene.control.CheckBox;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.Label;
-import javafx.scene.control.Slider;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.GridPane;
@@ -50,7 +47,6 @@ import org.quelea.services.utils.QueleaProperties;
 import org.quelea.services.utils.Utils;
 import org.quelea.windows.main.QueleaApp;
 import org.quelea.windows.main.schedule.ScheduleList;
-import org.quelea.windows.main.widgets.NumberTextField;
 
 /**
  * The panel that shows the bible options
@@ -62,9 +58,9 @@ public class OptionsBiblePanel extends GridPane implements PropertyPanel, BibleC
     private static final Logger LOGGER = LoggerUtils.getLogger();
     private final ComboBox<Bible> defaultBibleComboBox;
     private final CheckBox showVerseNumCheckbox;
-    private final ComboBox<String> useBibleVersesBox;
-    private final NumberTextField maxItemsPerSlideBox;
-    private final Slider maxCharsSlider;
+//    private final ComboBox<String> useBibleVersesBox;
+//    private final NumberTextField maxItemsPerSlideBox;
+//    private final Slider maxCharsSlider;
     private boolean changed;
 
     /**
@@ -118,60 +114,60 @@ public class OptionsBiblePanel extends GridPane implements PropertyPanel, BibleC
         GridPane.setConstraints(showVerseNumCheckbox, 2, 2);
         getChildren().add(showVerseNumCheckbox);
 
-        Label useBibleVersesLabel = new Label(LabelGrabber.INSTANCE.getLabel("use.bible.verses"));
-        GridPane.setConstraints(useBibleVersesLabel, 1, 3);
-        getChildren().add(useBibleVersesLabel);
-        useBibleVersesBox = new ComboBox<>();
-        useBibleVersesBox.getItems().addAll(LabelGrabber.INSTANCE.getLabel("verses"), LabelGrabber.INSTANCE.getLabel("words"));
-        useBibleVersesLabel.setLabelFor(useBibleVersesBox);
-        GridPane.setConstraints(useBibleVersesBox, 2, 3);
-        getChildren().add(useBibleVersesBox);
+//        Label useBibleVersesLabel = new Label(LabelGrabber.INSTANCE.getLabel("use.bible.verses"));
+//        GridPane.setConstraints(useBibleVersesLabel, 1, 3);
+//        getChildren().add(useBibleVersesLabel);
+//        useBibleVersesBox = new ComboBox<>();
+//        useBibleVersesBox.getItems().addAll(LabelGrabber.INSTANCE.getLabel("verses"), LabelGrabber.INSTANCE.getLabel("words"));
+//        useBibleVersesLabel.setLabelFor(useBibleVersesBox);
+//        GridPane.setConstraints(useBibleVersesBox, 2, 3);
+//        getChildren().add(useBibleVersesBox);
 
-        final String[] labels = LabelGrabber.INSTANCE.getLabel("max.items.per.slide").split("%");
-        final Label maxItemsPerSlideLabel = new Label("");
-        GridPane.setConstraints(maxItemsPerSlideLabel, 1, 4);
-        getChildren().add(maxItemsPerSlideLabel);
-        maxItemsPerSlideBox = new NumberTextField();
-        maxItemsPerSlideLabel.setLabelFor(maxItemsPerSlideBox);
-        GridPane.setConstraints(maxItemsPerSlideBox, 2, 4);
-        getChildren().add(maxItemsPerSlideBox);
+//        final String[] labels = LabelGrabber.INSTANCE.getLabel("max.items.per.slide").split("%");
+//        final Label maxItemsPerSlideLabel = new Label("");
+//        GridPane.setConstraints(maxItemsPerSlideLabel, 1, 4);
+//        getChildren().add(maxItemsPerSlideLabel);
+//        maxItemsPerSlideBox = new NumberTextField();
+//        maxItemsPerSlideLabel.setLabelFor(maxItemsPerSlideBox);
+//        GridPane.setConstraints(maxItemsPerSlideBox, 2, 4);
+////        getChildren().add(maxItemsPerSlideBox);
+//
+//        useBibleVersesBox.valueProperty().addListener(new ChangeListener<String>() {
+//            @Override
+//            public void changed(ObservableValue<? extends String> observable, String oldValue, String newValue) {
+//                maxItemsPerSlideLabel.setText(labels[0] + newValue + labels[1]);
+//                changed = true;
+//            }
+//        });
+//
+//        maxItemsPerSlideBox.textProperty().addListener(new ChangeListener<String>() {
+//            @Override
+//            public void changed(ObservableValue<? extends String> observable, String oldValue, String newValue) {
+//                changed = true;
+//            }
+//        });
 
-        useBibleVersesBox.valueProperty().addListener(new ChangeListener<String>() {
-            @Override
-            public void changed(ObservableValue<? extends String> observable, String oldValue, String newValue) {
-                maxItemsPerSlideLabel.setText(labels[0] + newValue + labels[1]);
-                changed = true;
-            }
-        });
-
-        maxItemsPerSlideBox.textProperty().addListener(new ChangeListener<String>() {
-            @Override
-            public void changed(ObservableValue<? extends String> observable, String oldValue, String newValue) {
-                changed = true;
-            }
-        });
-
-        Label maxCharsLabel = new Label(LabelGrabber.INSTANCE.getLabel("max.chars.line.label"));
-
-        GridPane.setConstraints(maxCharsLabel, 1, 5);
-        getChildren().add(maxCharsLabel);
-        maxCharsSlider = new Slider(10, 160, 0);
-
-        GridPane.setConstraints(maxCharsSlider, 2, 5);
-        getChildren().add(maxCharsSlider);
-        maxCharsLabel.setLabelFor(maxCharsSlider);
-        final Label maxCharsValue = new Label(Integer.toString((int) maxCharsSlider.getValue()));
-
-        GridPane.setConstraints(maxCharsValue, 3, 5);
-        getChildren().add(maxCharsValue);
-        maxCharsValue.setLabelFor(maxCharsSlider);
-
-        maxCharsSlider.valueProperty().addListener(new javafx.beans.value.ChangeListener<Number>() {
-            @Override
-            public void changed(ObservableValue<? extends Number> ov, Number t, Number t1) {
-                maxCharsValue.setText(Integer.toString((int) maxCharsSlider.getValue()));
-            }
-        });
+//        Label maxCharsLabel = new Label(LabelGrabber.INSTANCE.getLabel("max.chars.line.label"));
+//
+//        GridPane.setConstraints(maxCharsLabel, 1, 5);
+//        getChildren().add(maxCharsLabel);
+//        maxCharsSlider = new Slider(10, 160, 0);
+//
+//        GridPane.setConstraints(maxCharsSlider, 2, 5);
+////        getChildren().add(maxCharsSlider);
+//        maxCharsLabel.setLabelFor(maxCharsSlider);
+//        final Label maxCharsValue = new Label(Integer.toString((int) maxCharsSlider.getValue()));
+//
+//        GridPane.setConstraints(maxCharsValue, 3, 5);
+//        getChildren().add(maxCharsValue);
+//        maxCharsValue.setLabelFor(maxCharsSlider);
+//
+//        maxCharsSlider.valueProperty().addListener(new javafx.beans.value.ChangeListener<Number>() {
+//            @Override
+//            public void changed(ObservableValue<? extends Number> ov, Number t, Number t1) {
+//                maxCharsValue.setText(Integer.toString((int) maxCharsSlider.getValue()));
+//            }
+//        });
 
         readProperties();
 
@@ -208,9 +204,9 @@ public class OptionsBiblePanel extends GridPane implements PropertyPanel, BibleC
             }
         }
         showVerseNumCheckbox.setSelected(props.getShowVerseNumbers());
-        useBibleVersesBox.getSelectionModel().select((props.getBibleSectionVerses()) ? 0 : 1);
-        maxItemsPerSlideBox.setNumber(props.getMaxBibleItems());
-        maxCharsSlider.setValue(props.getMaxBibleChars());
+//        useBibleVersesBox.getSelectionModel().select((props.getBibleSectionVerses()) ? 0 : 1);
+//        maxItemsPerSlideBox.setNumber(props.getMaxBibleItems());
+//        maxCharsSlider.setValue(props.getMaxBibleChars());
 
     }
 
@@ -225,10 +221,10 @@ public class OptionsBiblePanel extends GridPane implements PropertyPanel, BibleC
             props.setDefaultBible(bible);
         }
         props.setShowVerseNumbers(showVerseNumCheckbox.isSelected());
-        props.setBibleSectionVerses(useBibleVersesBox.getSelectionModel().getSelectedIndex() == 0);
-        props.setMaxBibleItems(maxItemsPerSlideBox.getNumber());
-        int maxCharsPerLine = (int) maxCharsSlider.getValue();
-        props.setMaxBibleChars(maxCharsPerLine);
+//        props.setBibleSectionVerses(useBibleVersesBox.getSelectionModel().getSelectedIndex() == 0);
+//        props.setMaxBibleItems(maxItemsPerSlideBox.getNumber());
+//        int maxCharsPerLine = (int) maxCharsSlider.getValue();
+//        props.setMaxBibleChars(maxCharsPerLine);
         if (changed) {
             if (QueleaApp.get().getMainWindow().getMainPanel() != null) {
                 ScheduleList list = QueleaApp.get().getMainWindow().getMainPanel().getSchedulePanel().getScheduleList();
